FIX - Mejoras en los onchange de tareas y se agrega pagina de descripcion del proyecto para ayudar al usuario en la seleccion de fechas

--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -272,6 +272,11 @@
                         </group>
                     </group>
                     <notebook>
+                        <page string="Resumen del proyecto">
+                            <field name="date_start_proyecto"/>
+                            <field name="date_end_proyecto"/>
+                            <field name="estado_proyecto"/>
+                        </page>
                         <page string="Descripcion de la tarea">
                             <field name="description" placeholder="Agregar descripcion..."/>
                         </page>
