--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -261,22 +261,22 @@
                             <field name="project_id2" on_change="onchange_proyecto(project_id2)"/>
                             <field name="responsible_id" invisible="1"/>
                             <field name="supervisor_id" invisible="1"/>
+                            <field name="ejecutor_id" invisible="1"/>
+                            <separator string="Resumen del proyecto" colspan="2"/>
+                            <field name="date_start_proyecto" readonly="1"/>
+                            <field name="date_end_proyecto" readonly="1"/>
+                            <field name="estado_proyecto" readonly="1"/>
+                        </group>
+                        <group>
                             <field name="name_tarea" />
                             <field name="date_start_tarea" on_change="onchange_date_start_tarea(project_id2, date_start_tarea)"/>
                             <field name="date_end_tarea" on_change="onchange_date_end_tarea(project_id2, date_end_tarea)"/>
-                        </group>
-                        <group>
-                            <field name="estado_tarea" />
                             <field name="dias_tarea" />
+                            <field name="estado_tarea" />
                             <field name="progreso_tarea" readonly="1" widget="progressbar"/>
                         </group>
                     </group>
                     <notebook>
-                        <page string="Resumen del proyecto">
-                            <field name="date_start_proyecto"/>
-                            <field name="date_end_proyecto"/>
-                            <field name="estado_proyecto"/>
-                        </page>
                         <page string="Descripcion de la tarea">
                             <field name="description" placeholder="Agregar descripcion..."/>
                         </page>
