FIX - Se sustituye nombres de los page en las tareas a Adjuntos - Informes y Adjuntos - Imagenes

--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -341,10 +341,10 @@
                                 </field>
                             </group>
                         </page>
-                        <page string="Subida de informe">
+                        <page string="Adjuntos - Informe">
                             <field name="informe_tareas"/>
                         </page>
-                        <page string="Subida de imagenes">
+                        <page string="Adjuntos - Imagenes">
                             <field name="image" widget='image'/>
                         </page>
                     </notebook>
