--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -443,8 +443,8 @@
                             </group>
                             <group>
                                 <field name="name_incidencia" />
-                                <field name="date_reporter" />
-                                <field name="reporter_id"/>
+                                <field name="date_reporter" readonly="1"/>
+                                <field name="reporter_id" />
                                 <field name="verificar_solicitud"/>
                                 <field name="solicitud_cambio" attrs="{'invisible':[('verificar_solicitud', '=', False)]}" />
                             </group>
