--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -205,7 +205,7 @@
                                 </group>
                             </group>
                         </page>
-                        <page string="Visualizador de tareas" attrs="{'invisible':[('estado', '=', 'Borrador')]}">
+                        <page string="Visualizador de tareas">
                             <field name="tareas_ids" nolabel="1" colspan="4" mode="tree">
                                 <tree string="Tareas">
                                     <field name="name_tarea" />
@@ -215,7 +215,7 @@
                                 </tree>
                             </field>
                         </page>
-                        <page string="Visualizador de incidencias" attrs="{'invisible':[('estado', '=', 'Borrador')]}">
+                        <page string="Visualizador de incidencias">
                             <field name="incidencias_ids" nolabel="1" colspan="4" mode="tree">
                                 <tree string="Incidencias">
                                     <field name="date_reporter"/>
@@ -225,13 +225,13 @@
                                 </tree>
                             </field>
                         </page>
-                        <page string="Conclusiones" attrs="{'invisible':[('estado', '!=', 'Terminado')]}">
-                            <separator string="Defina las conclusiones" colspan="2"/>
-                            <field name="conclusiones" />
+                        <page string="Conclusiones">
+                            <separator string="Defina las conclusiones (Editable al finalizar el proyecto)" colspan="2"/>
+                            <field name="conclusiones" attrs="{'readonly':[('estado', '!=', 'Terminado')]}"/>
                         </page>
-                        <page string="Acuerdos" attrs="{'invisible':[('estado', '!=', 'Terminado')]}">
-                            <separator string="Defina los acuerdos llegados" colspan="2"/>
-                            <field name="acuerdos"/>
+                        <page string="Acuerdos">
+                            <separator string="Defina los acuerdos (Editable al finalizar el proyecto)" colspan="2"/>
+                            <field name="acuerdos" attrs="{'readonly':[('estado', '!=', 'Terminado')]}"/>
                         </page>
                     </notebook>
                 </form>
