--- a/gestion_canaimas/view/solicitud_reparacion.xml
+++ b/gestion_canaimas/view/solicitud_reparacion.xml
@@ -88,13 +88,14 @@
                     <field name="serial" />
                     <field name="hardware" />
                     <field name="software" />
+                    <!-- <field name="tecnico" /> -->
                 </search>
             </field>            
         </record>
 <!--Menu-->
 
-		<menuitem id="main_canaima_menu" name="Gestion de Canaimas" /> 
-		<menuitem id="reparacion_canaima_menu" name="Reparaciones" parent="main_canaima_menu" />
+		<menuitem id="main_canaima_menu" name="Gestion de Canaimas"/> 
+		<menuitem id="reparacion_canaima_menu" name="Reparaciones" parent="main_canaima_menu" sequence="2"/>
 		<menuitem id="reparacion_menu" name="Registro de Reparaciones" parent="reparacion_canaima_menu" action="reparacion_list_action" />
         
 	</data>
